@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -16,7 +16,9 @@
  */
 package org.apache.camel.component.smpp;
 
+import org.apache.camel.ExtendedCamelContext;
 import org.apache.camel.Processor;
+import org.apache.camel.spi.ExchangeFactory;
 import org.jsmpp.bean.BindType;
 import org.jsmpp.bean.NumberingPlanIndicator;
 import org.jsmpp.bean.TypeOfNumber;
@@ -24,10 +26,11 @@ import org.jsmpp.session.BindParameter;
 import org.jsmpp.session.MessageReceiverListener;
 import org.jsmpp.session.SMPPSession;
 import org.jsmpp.session.SessionStateListener;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import static org.junit.Assert.assertSame;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.reset;
@@ -38,28 +41,38 @@ import static org.mockito.Mockito.when;
  * JUnit test class for <code>org.apache.camel.component.smpp.SmppConsumer</code>
  */
 public class SmppConsumerTest {
-    
+
+    private ExchangeFactory exchangeFactory;
+    private ExtendedCamelContext context;
     private SmppConsumer consumer;
     private SmppEndpoint endpoint;
     private SmppConfiguration configuration;
     private Processor processor;
     private SMPPSession session;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         configuration = new SmppConfiguration();
         configuration.setServiceType("CMT");
         configuration.setSystemType("cp");
+        configuration.setPassword("password");
+        context = mock(ExtendedCamelContext.class);
+        exchangeFactory = mock(ExchangeFactory.class);
         endpoint = mock(SmppEndpoint.class);
         processor = mock(Processor.class);
         session = mock(SMPPSession.class);
-        
+
+        when(endpoint.getCamelContext()).thenReturn(context);
+        when(context.adapt(ExtendedCamelContext.class)).thenReturn(context);
+        when(context.getExchangeFactory()).thenReturn(exchangeFactory);
+        when(exchangeFactory.newExchangeFactory(any())).thenReturn(exchangeFactory);
+
         // the construction of SmppConsumer will trigger the getCamelContext call
         consumer = new SmppConsumer(
-                endpoint, 
+                endpoint,
                 configuration,
                 processor) {
-            
+
             SMPPSession createSMPPSession() {
                 return session;
             }
@@ -69,44 +82,45 @@ public class SmppConsumerTest {
     @Test
     public void doStartShouldStartANewSmppSession() throws Exception {
         when(endpoint.getConnectionString())
-            .thenReturn("smpp://smppclient@localhost:2775");
-        BindParameter expectedBindParameter = new BindParameter(BindType.BIND_RX,
-            "smppclient",
-            "password",
-            "cp",
-            TypeOfNumber.UNKNOWN,
-            NumberingPlanIndicator.UNKNOWN,
-            "");
-        when(session.connectAndBind("localhost", new Integer(2775), expectedBindParameter))
-            .thenReturn("1");
-        
+                .thenReturn("smpp://smppclient@localhost:2775");
+        BindParameter expectedBindParameter = new BindParameter(
+                BindType.BIND_RX,
+                "smppclient",
+                "password",
+                "cp",
+                TypeOfNumber.UNKNOWN,
+                NumberingPlanIndicator.UNKNOWN,
+                "");
+        when(session.connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter))
+                .thenReturn("1");
+
         consumer.doStart();
-        
-        verify(session).setEnquireLinkTimer(5000);
+
+        verify(session).setEnquireLinkTimer(60000);
         verify(session).setTransactionTimer(10000);
         verify(session).addSessionStateListener(isA(SessionStateListener.class));
         verify(session).setMessageReceiverListener(isA(MessageReceiverListener.class));
-        verify(session).connectAndBind("localhost", new Integer(2775), expectedBindParameter);
+        verify(session).connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter);
     }
 
     @Test
     public void doStopShouldNotCloseTheSMPPSessionIfItIsNull() throws Exception {
         when(endpoint.getConnectionString())
-            .thenReturn("smpp://smppclient@localhost:2775");
-        
+                .thenReturn("smpp://smppclient@localhost:2775");
+
         consumer.doStop();
     }
-    
+
     @Test
     public void doStopShouldCloseTheSMPPSession() throws Exception {
         doStartShouldStartANewSmppSession();
         reset(endpoint, processor, session);
-        
+
         when(endpoint.getConnectionString())
-            .thenReturn("smpp://smppclient@localhost:2775");
-        
+                .thenReturn("smpp://smppclient@localhost:2775");
+
         consumer.doStop();
-        
+
         verify(session).removeSessionStateListener(isA(SessionStateListener.class));
         verify(session).unbindAndClose();
     }
@@ -115,22 +129,22 @@ public class SmppConsumerTest {
     public void addressRangeFromConfigurationIsUsed() throws Exception {
         configuration.setAddressRange("(111*|222*|333*)");
         BindParameter expectedBindParameter = new BindParameter(
-            BindType.BIND_RX,
-            "smppclient",
-            "password",
-            "cp",
-            TypeOfNumber.UNKNOWN,
-            NumberingPlanIndicator.UNKNOWN,
-            "(111*|222*|333*)");
+                BindType.BIND_RX,
+                "smppclient",
+                "password",
+                "cp",
+                TypeOfNumber.UNKNOWN,
+                NumberingPlanIndicator.UNKNOWN,
+                "(111*|222*|333*)");
         when(session.connectAndBind("localhost",
-                new Integer(2775),
+                Integer.valueOf(2775),
                 expectedBindParameter))
-            .thenReturn("1");
+                        .thenReturn("1");
 
         consumer.doStart();
 
         verify(session).connectAndBind("localhost",
-                new Integer(2775),
+                Integer.valueOf(2775),
                 expectedBindParameter);
     }
 
